AWS/nexus-iq-server/nxiq-vpc.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Nexus IQ Server VPC Stack.",
  "Parameters": {
    "VpcNetBlock": {
      "Type": "String",
      "Default": "10.0.0.0/16",
      "Description": "The network address block for the VPC",
      "MinLength": "9",
      "MaxLength": "18",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x."
    },
    "SubnetAz": {
      "Type": "String",
      "Default": "10.0.1.0/24",
      "Description": "The network address block for subnet 1",
      "MinLength": "9",
      "MaxLength": "18",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x."
    },
    "NexusIQVersion": {
      "Type": "String"
    }
  },
  "Resources": {
    "Vpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "VpcNetBlock"
        },
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Platform",
            "Value": "nexus-iq"
          },
          {
            "Key": "Version",
            "Value": {
              "Ref": "NexusIQVersion"
            }
          }
        ]
      }
    },
    "InstanceSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Nexus IQ EC2 Security Group",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8070",
            "ToPort": "8070",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Platform",
            "Value": "nexus-iq"
          },
          {
            "Key": "Version",
            "Value": {
              "Ref": "NexusIQVersion"
            }
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        }
      }
    },
    "InstanceSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Ref": "SubnetAz"
        },
        "MapPublicIpOnLaunch":true,
        "VpcId": {
          "Ref": "Vpc"
        },
        "Tags": [
          {
            "Key": "Platform",
            "Value": "nexus-iq"
          },
          {
            "Key": "Version",
            "Value": {
              "Ref": "NexusIQVersion"
            }
          }
        ]
      }
    },
    "SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable"
        },
        "SubnetId": {
          "Ref": "InstanceSubnet"
        }
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Platform",
            "Value": "nexus-iq"
          },
          {
            "Key": "Version",
            "Value": {
              "Ref": "NexusIQVersion"
            }
          }
        ]
      }
    },
    "VPCGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "DefaultRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "RouteTable"
        },
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      },
      "DependsOn": "VPCGatewayAttachment"
    },
    "RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "Tags": [
          {
            "Key": "Platform",
            "Value": "nexus-iq"
          },
          {
            "Key": "Version",
            "Value": {
              "Ref": "NexusIQVersion"
            }
          }
        ]
      }
    }
  },
  "Outputs": {
    "Vpc": {
      "Value": {
        "Ref": "Vpc"
      }
    },
    "InstanceSubnet": {
      "Value": {
        "Ref": "InstanceSubnet"
      }
    },
    "InstanceSecurityGroup": {
      "Value": {
        "Ref": "InstanceSecurityGroup"
      }
    }
  }
}
